--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ plugins {
     id "de.undercouch.download" version "4.0.4"
     id "net.researchgate.release" version "2.8.0"
     id 'org.javamodularity.moduleplugin' version '1.7.0' apply false
+    id "org.sonarqube" version "3.5.0.2730"
 }
 
 apply plugin: 'java'
@@ -191,3 +192,10 @@ task codeCoverageReport(type: JacocoReport) {
     }
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "aneeshafedo_ballerina-openapi"
+        property "sonar.organization", "aneeshafedo"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
